<resources>
    <string name="app_name">Security Steward</string>
    <string name="title_main">Security Steward</string>
    <string name="tab_button1">Devices</string>
    <string name="tab_button2">Process</string>
    <string name="tab_button3">Me</string>
    <string name="device_unsupported">Sorry, this application is not supported on your device.</string>
    <string name="message_red_default">1</string>
    <string name="defaule_time">00:00</string>
    <string name="text_yestoday">Yestoday</string>
    <string name="text_no_device">No device</string>
    <string name="text_no_download">No task</string>
    <string name="text_no_item">List empty</string>
    <string name="text_copyright">Copyright ©2016 SDUT - beyond™ </string>
    <string name="text_about_content">  This product by beyond team responsible for the development and maintenance, if the use of questions, please contact us, bring you inconvenience, please understanding.</string>
    <string name="text_about_contact">Email：734104819@qq.com</string>
    <string name="text_message_details">Details</string>
    <string name="text_no_message">&#091;No message&#093;</string>
    <string name="video_layout_loading">Loading…</string>
    <string name="sys_bind_success">Device bind success</string>
    <string name="sys_modify_success">Device information updated</string>
    <string name="no_network">Connection failed</string>
    <string name="item_clean_all_msg">Clear all message</string>
    <string name="item_clear_msg">Clear device\'s meaasge</string>
    <string name="item_local_debug">Local Debug</string>
    <string name="item_update">Check Update</string>
    <string name="topbar_left_text_default">Back</string>
    <string name="topbar_title_text_default">Loading…</string>
    <string name="topbar_title_settings">Settings</string>
    <string name="topbar_title_bind">Bind Dev.</string>
    <string name="topbar_title_user_login">Login</string>
    <string name="topbar_back_default">Back</string>
    <string name="topbar_title_register">Register</string>
    <string name="topbar_title_verify_phone">Verify Phone</string>
    <string name="topbar_title_modify_pwd">Modify Password</string>
    <string name="topbar_title_reset_password">Reset Password</string>
    <string name="topbar_title_scan_qr">QR Code</string>
    <string name="topbar_title_user_profile">My Profile</string>
    <string name="topbar_title_item">Item</string>
    <string name="topbar_title_message">Message</string>
    <string name="topbar_title_wifi">WiFi Conf.</string>
    <string name="topbar_title_about">About</string>
    <string name="btn_login">Login</string>
	<string name="btn_logoff">Logoff</string>
    <string name="btn_login_processing">Loging in…</string>
    <string name="btn_waiting">Waiting…</string>
    <string name="btn_next">Next</string>
    <string name="btn_ok">OK</string>
    <string name="btn_register">Register</string>
    <string name="btn_bind">Bind</string>
    <string name="btn_create_qr">Create QR</string>
    <string name="user_item_setting">Settings</string>
    <string name="user_item_album">Album</string>
    <string name="user_item_favorite">Favorites</string>
    <string name="tab_item_downloading">Downloading</string>
    <string name="tab_item_finished">Finished</string>
    <string name="item_face">Profile Photo</string>
    <string name="item_user_phone">Phone</string>
    <string name="item_nick_name">Nick Name</string>
    <string name="item_gender">Gender</string>
    <string name="item_gender_male">Male</string>
    <string name="item_gender_female">Female</string>
    <string name="item_birthday">Birthday</string>
    <string name="item_none">None</string>
    <string name="item_address">Address</string>
    <string name="item_remark">Remark</string>
    <string name="item_change_pwd">Change Password</string>
    <string name="item_logout">Log Out</string>
    <string name="item_about">About</string>
    <string name="item_help">Help</string>
    <string name="item_unbind">Unbind</string>
    <string name="item_alias">Alias</string>
    <string name="item_level">Level</string>
    <string name="item_level_1">Low</string>
    <string name="item_level_2">Medium</string>
    <string name="item_level_3">High</string>
    <string name="popup_item_scan_qr">Scan QR Code</string>
    <string name="popup_item_add_device">Add Device</string>
    <string name="popup_item_take_photo">Take Photo</string>
    <string name="popup_item_choose_photo">Choose from Photos</string>
    <string name="popup_title_photo">Replace Avatar</string>
    <string name="popup_item_set_defalut">Set as Default</string>
    <string name="popup_item_set_wifi">Set Wifi</string>
    <string name="text_no_user">Login/Register</string>
    <string name="text_already_send_sms">Sent SMS verification code to : </string>
    <string name="text_bind_warning">Confirm the device\'s information(Device ID), you can set an alias and images to identify the device.</string>
    <string name="text_wifi_info">Set up a valid wifi information, and using your device scan generated qrcode in order to access network.</string>
    <string name="text_bind_name_default">Unnamed device</string>
    <string name="hint_login_user">Username/E-mail/Phone</string>
    <string name="hint_login_pwd">Password</string>
    <string name="hint_register_verify_code">6-digit SMS codes</string>
    <string name="hint_register_pwd">Password, 6~16 characters</string>
    <string name="hint_register_pwd_confirm">Enter password again</string>
    <string name="hint_verify_phone_number">Please enter phone number</string>
    <string name="hint_modify_pwd_old">Old Password</string>
    <string name="hint_modify_pwd_new">New Password</string>
    <string name="hint_modify_pwd_new_confirm">Confirm New Password</string>
    <string name="hint_reset_new_password">New password, 6~16 characters</string>
    <string name="hint_bind_did">Dveice ID(DID)</string>
    <string name="hint_wifi_ssid">SSID(Unsupport Chinese)</string>
    <string name="hint_wifi_pwd">Password</string>
    <string name="hint_bind_name">Device Alias</string>
    <string name="hint_bind_image">Set Image</string>
    <string name="toast_login_first">Please Login</string>
    <string name="toast_text_success">Success</string>
    <string name="toast_login_failed_wrong">Wrong user or password</string>
    <string name="toast_login_success">Login success</string>
    <string name="toast_register_success">Registration success</string>
    <string name="toast_register_fail_existed">User already exists</string>
    <string name="toast_register_fail_code_invalid">Verify Code Error</string>
    <string name="toast_error_unknown">Unknown Error</string>
    <string name="toast_error_timeout">Timeout</string>
    <string name="toast_error_connection_failed">Connection Error</string>
    <string name="toast_error_user_info_fail">Get User Info Failed</string>
    <string name="toast_error_user_info_update_fail">User Info Update Failed</string>
    <string name="toast_error_token_expired">Authentication Expired</string>
    <string name="toast_register_fail_mismatch">Passwords do not match</string>
    <string name="toast_verify_phone_send_failed">Send Failed</string>
    <string name="toast_input_format_user">Invalid User</string>
    <string name="toast_input_format_phone">Invalid Phone</string>
    <string name="toast_input_format_pwd">Invalid Password</string>
    <string name="toast_input_format_pwd_old">Invalid Old Password</string>
    <string name="toast_input_format_pwd_new">Invalid New Password</string>
    <string name="toast_input_format_verify_code">Invalid Code</string>
    <string name="toast_scan_success">Scan Success</string>
    <string name="toast_input_limit_exceeded">Length limit exceeded</string>
    <string name="toast_input_empty">Can not be empty</string>
    <string name="toast_bind_success">Bind Success</string>
    <string name="toast_bind_no_did">Device id can not be empty</string>
    <string name="toast_wifi_info_err">Please enter the full wifi information</string>
    <string name="toast_wifi_pwd_length_err">Password length at least 8</string>
    <string name="toast_unbind_success">Unbind success</string>
 	<string name="toast_bind_device_already">Device already binded</string>
 	<string name="toast_local_version_err">Get local version failed</string>
    <string name="toast_new_version_err">Get new version failed</string>
    <string name="toast_is_least_ver">Currently is the latest version</string>
    <string name="toast_now_downloading">Downloading, please install manually after the download is complete.</string>
    <string name="checkbox_text_license">I have read and agree</string>
    <string name="checkbox_text_no_pwd">No password</string>
    <string name="link_text_license_agreement">License Agreement</string>
    <string name="link_text_forget_password">Forget Password?</string>
    <string name="link_text_register">Register</string>
    <string name="alert_title_new_ver">New version</string>
    <string name="alert_title_confirm">Confirm</string>
    <string name="alert_message_logout">Are you sure want to log out this account? Your extra data (For eg. Avatar) will be deleted.</string>
    <string name="alert_button_yes">Yes</string>
    <string name="alert_button_no">No</string>
    <string name="alert_message_not_saved">Modifications have not been saved, quit?</string>
    <string name="alert_button_quit">Quit</string>
    <string name="alert_button_cancel">Cancel</string>
    <string name="alert_message_unbind">Are you sure want to unbind this device? The device message records will be deleted and you will not receive any news of this device.</string>
    <string name="alert_message_clear_all">Are you sure want to delete all message records? The photos stored on the server will be deleted!</string>
    <string name="alert_message_clear">Are you sure want to delete the message record for this device? The photos stored on the server will be deleted!</string>
    <string name="alert_new_version" formatted="false">Found a new version!\nNow ver.:%s\nnew ver.:%s\nDownload now?</string>
    <string name="notify_title_alert">Device Alert</string>
    <string name="notify_text_test">Your device has been push an alert message!</string>
	<string name="viewfinderview_status_text1">Make the frame align to QR code</string>
	<string name="viewfinderview_status_text2">It can automatically scan</string>
	<string name="descrip_qr">QR Code</string>
	<string name="bookmark_picker_name">Bookmarks</string>
	<string name="button_add_calendar">Add to calendar</string>
	<string name="button_add_contact">Add contact</string>
	<string name="button_book_search">Book Search</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_custom_product_search">Custom search</string>
	<string name="button_dial">Dial number</string>
	<string name="button_email">Send email</string>
	<string name="button_get_directions">Get directions</string>
	<string name="button_mms">Send MMS</string>
	<string name="button_ok">OK</string>
	<string name="button_open_browser">Open browser</string>
	<string name="button_product_search">Product search</string>
	<string name="button_search_book_contents">Search contents</string>
	<string name="button_share_app">Application</string>
	<string name="button_share_bookmark">Bookmark</string>
	<string name="button_share_by_email">Share via email</string>
	<string name="button_share_by_sms">Share via SMS</string>
	<string name="button_share_clipboard">Clipboard</string>
	<string name="button_share_contact">Contact</string>
	<string name="button_show_map">Show map</string>
	<string name="button_sms">Send SMS</string>
	<string name="button_web_search">Web search</string>
	<string name="button_wifi">Connect to Network</string>
	<string name="contents_contact">Contact info</string>
	<string name="contents_email">Email address</string>
</resources>