<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@color/layout_default" >

	<LinearLayout
		android:id="@+id/ll_dev_message"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="15dp"
		android:padding="10dp"
		android:clickable="true"
		android:background="@drawable/message_bg"
		android:orientation="vertical" >

		<TextView
			android:id="@+id/tv_message_title"
			android:text="@string/topbar_title_item"
			android:layout_marginTop="8dp"
			android:textColor="#000000"
            android:textSize="16sp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
		
		<TextView
			android:id="@+id/tv_message_date"
			android:text="@string/defaule_time"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
		
		<TextView
			android:id="@+id/tv_message_body"
			android:textColor="@color/item_default_text"
			android:layout_marginTop="10dp"
			android:text="@string/text_about_content"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
		
		<TextView
			android:id="@+id/tv_message_extra"
			android:textColor="@color/red"
			android:text="@string/text_bind_warning"
			android:layout_marginTop="20dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
		
		<View
	        android:layout_width="fill_parent"
	        android:layout_marginTop="8dp"
	        android:layout_marginBottom="8dp"
	        android:layout_height="@dimen/item_div_line2"
	        android:background="@color/item_div_color" />
		
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >
			
			<TextView
				android:width="10sp"
				android:textColor="@color/item_default_text"
				android:text="@string/text_message_details"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />
			
			<ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right_arrow_icon_small"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name" />
		</RelativeLayout>

	</LinearLayout>

</LinearLayout>
