<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.challenger.securitysteward"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
   	android:clipToPadding="true"
   	android:background="@color/topbar_background" >
   	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/layout_default" >

	    <com.challenger.securitysteward.controls.TopBar
	        android:id="@+id/topbar_wifi"
		    android:layout_width="fill_parent"
		    android:layout_height="@dimen/topbar_height"
		    app:btnBackground="@color/topbar_btn_background"
		    app:btnTextColor="@color/topbar_btn_text"
		    app:title="@string/topbar_title_wifi"
		    app:titleTextColor="@color/topbar_title_text"
		    app:titleTextSize="@dimen/topbar_title_size"
		    app:topbar_background="@color/topbar_background" >
	    </com.challenger.securitysteward.controls.TopBar>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical"
	        android:layout_marginTop="@dimen/topbar_height" >
	        
	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="@dimen/margin_common"
	            android:paddingEnd="@dimen/margin_text_start"
	            android:paddingStart="@dimen/margin_text_start"
	            android:text="@string/text_wifi_info"
	            android:textSize="@dimen/text_hint_size" />
		    
		    <EditText
		        android:layout_marginTop="@dimen/margin_common"
		        android:id="@+id/wifi_ssid"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/hint_wifi_ssid"
		        android:fontFamily="sans-serif"
		        android:maxLength="32"
		        android:drawablePadding="10dp" />
		    
		    <RelativeLayout
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:orientation="horizontal" >
		    	
			    <CheckBox
			    	android:layout_alignParentEnd="true"
			    	android:id="@+id/cb_no_pwd"
			    	android:layout_marginTop="@dimen/margin_common"
			    	android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
			    	android:text="@string/checkbox_text_no_pwd"
			    	android:layout_marginEnd="@dimen/margin_text_start" />
			    
			    <EditText
			    	android:layout_toStartOf="@id/cb_no_pwd"
			        android:layout_marginTop="@dimen/margin_common"
			        android:id="@+id/wifi_pwd"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:hint="@string/hint_wifi_pwd"
			        android:fontFamily="sans-serif"
			        android:maxLength="32"
			        android:drawablePadding="10dp"
			        android:inputType="textPassword" />		    	
		    </RelativeLayout>
		    
		    
		    <Button 
		        android:background="@drawable/button_wide_selector"
		        android:layout_marginTop="@dimen/margin_common"
		        android:id="@+id/create_qr"
		        android:text="@string/btn_create_qr"
		        android:textColor="@color/topbar_title_text"
		        android:layout_width="@dimen/btn_width_wide"
		        android:layout_height="@dimen/btn_height_low"
		        android:layout_gravity="center_horizontal"/>
		    
	    </LinearLayout>
	    
    </RelativeLayout>

</RelativeLayout>
