<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.challenger.securitysteward"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
   	android:clipToPadding="true"
   	android:background="@color/topbar_background" >
   	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/layout_default" >

	    <com.challenger.securitysteward.controls.TopBar
	        android:id="@+id/topbar_register"
		    android:layout_width="fill_parent"
		    android:layout_height="@dimen/topbar_height"
		    app:btnBackground="@color/topbar_btn_background"
		    app:btnTextColor="@color/topbar_btn_text"
		    app:title="@string/topbar_title_register"
		    app:titleTextColor="@color/topbar_title_text"
		    app:titleTextSize="@dimen/topbar_title_size"
		    app:topbar_background="@color/topbar_background" >
	    </com.challenger.securitysteward.controls.TopBar>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical"
	        android:layout_marginTop="@dimen/topbar_height" >
	        
	        <TextView
	            android:id="@+id/register_verify_phone"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="@dimen/margin_common"
	            android:paddingEnd="@dimen/margin_text_start"
	            android:paddingStart="@dimen/margin_text_start"
	            android:text="@string/text_already_send_sms"
	            android:textSize="@dimen/text_hint_size" />
	        
		    <EditText
		        android:inputType="number"
		        android:layout_marginTop="@dimen/margin_common"
		        android:id="@+id/register_form_verify_code"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/hint_register_verify_code"
		        android:maxLength="6"
		        android:drawableStart="@drawable/sms"
		        android:drawablePadding="10dp" />
		    
		    <EditText
		        android:inputType="textPassword"
		        android:layout_marginTop="@dimen/margin_common"
		        android:id="@+id/register_form_pwd"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/hint_register_pwd"
		        android:fontFamily="sans-serif"
		        android:maxLength="16"
		        android:drawableStart="@drawable/login_new_pwd"
		        android:drawablePadding="10dp" />
		    
		    <EditText
		        android:inputType="textPassword"
		        android:layout_marginTop="@dimen/margin_common"
		        android:id="@+id/register_form_pwd_confirm"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/hint_register_pwd_confirm"
		        android:fontFamily="sans-serif"
		        android:maxLength="16"
		        android:drawableStart="@drawable/login_new_pwd"
		        android:drawablePadding="10dp" />
		    
		    <Button 
		        android:background="@drawable/button_wide_selector"
		        android:layout_marginTop="@dimen/margin_common"
		        android:id="@+id/register_form_btn_submit"
		        android:text="@string/btn_register"
		        android:textColor="@color/topbar_title_text"
		        android:layout_width="@dimen/btn_width_wide"
		        android:layout_height="@dimen/btn_height_low"
		        android:layout_gravity="center_horizontal"/>
		    
	    </LinearLayout>
	    
    </RelativeLayout>

</RelativeLayout>
